--- a/thirdeye/thirdeye-pinot/src/test/resources/test-metric-anomalies-template.html
+++ b/thirdeye/thirdeye-pinot/src/test/resources/test-metric-anomalies-template.html
@@ -17,7 +17,7 @@
         <strong>5 anomalies</strong> were detected on the metrics listed below
       </p>
       <p>
-        between <strong>Jan 01, 00:00</strong> and <strong>Jan 07, 17:00</strong> (PDT)
+        between <strong>Jan 01, 00:00</strong> and <strong>Jan 07, 17:00</strong> (UTC)
       </p>
       <p>
         <a style="padding: 6px 12px; border-radius: 2px; border: 1px solid #FFF; font-size: 16px; font-weight: bold; color: white; text-decoration: none; line-height: 32px;" href="http://localhost:8080/dashboard/app/#/anomalies?anomalyIds=4,5,6,7,8">View all anomalies on ThirdEye</a>
@@ -55,7 +55,7 @@
               </tr>
               <tr style="border-bottom: 1px solid #C7D1D8;">
                 <td style="padding: 6px 12px;white-space: nowrap;">
-                  <div style="color: rgba(0,0,0,0.9); font-size:14px; line-height:20px;">Jan 06, 10:00 PDT</div>
+                  <div style="color: rgba(0,0,0,0.9); font-size:14px; line-height:20px;">Jan 06, 10:00 UTC</div>
                   <span style="color: rgba(0,0,0,0.6); font-size:12px; line-height:16px;">3 hours</span>
                   <a style="font-weight: bold; text-decoration: none; font-size:14px; line-height:20px; color: #0073B1;" href="http://localhost:8080/dashboard/app/#/rootcause?anomalyId=4"
                      target="_blank">(view)</a>
@@ -70,7 +70,7 @@
               </tr>
               <tr style="border-bottom: 1px solid #C7D1D8;">
                 <td style="padding: 6px 12px;white-space: nowrap;">
-                  <div style="color: rgba(0,0,0,0.9); font-size:14px; line-height:20px;">Jan 07, 10:00 PDT</div>
+                  <div style="color: rgba(0,0,0,0.9); font-size:14px; line-height:20px;">Jan 07, 10:00 UTC</div>
                   <span style="color: rgba(0,0,0,0.6); font-size:12px; line-height:16px;">7 hours</span>
                   <a style="font-weight: bold; text-decoration: none; font-size:14px; line-height:20px; color: #0073B1;" href="http://localhost:8080/dashboard/app/#/rootcause?anomalyId=5"
                      target="_blank">(view)</a>
@@ -85,7 +85,7 @@
 
               <tr style="border-bottom: 1px solid #C7D1D8;">
                 <td style="padding: 6px 12px;white-space: nowrap;">
-                  <div style="color: rgba(0,0,0,0.9); font-size:14px; line-height:20px;">Jan 01, 10:00 PDT</div>
+                  <div style="color: rgba(0,0,0,0.9); font-size:14px; line-height:20px;">Jan 01, 10:00 UTC</div>
                   <span style="color: rgba(0,0,0,0.6); font-size:12px; line-height:16px;">151 hours</span>
                   <a style="font-weight: bold; text-decoration: none; font-size:14px; line-height:20px; color: #0073B1;" href="http://localhost:8080/dashboard/app/#/rootcause?anomalyId=6"
                      target="_blank">(view)</a>
@@ -100,7 +100,7 @@
 
               <tr style="border-bottom: 1px solid #C7D1D8;">
                 <td style="padding: 6px 12px;white-space: nowrap;">
-                  <div style="color: rgba(0,0,0,0.9); font-size:14px; line-height:20px;">Jan 01, 00:00 PDT</div>
+                  <div style="color: rgba(0,0,0,0.9); font-size:14px; line-height:20px;">Jan 01, 00:00 UTC</div>
                   <span style="color: rgba(0,0,0,0.6); font-size:12px; line-height:16px;">149.08 hours</span>
                   <a style="font-weight: bold; text-decoration: none; font-size:14px; line-height:20px; color: #0073B1;" href="http://localhost:8080/dashboard/app/#/rootcause?anomalyId=7"
                      target="_blank">(view)</a>
@@ -116,7 +116,7 @@
 
               <tr style="border-bottom: 1px solid #C7D1D8;">
                 <td style="padding: 6px 12px;white-space: nowrap;">
-                  <div style="color: rgba(0,0,0,0.9); font-size:14px; line-height:20px;">Jan 01, 10:05 PDT</div>
+                  <div style="color: rgba(0,0,0,0.9); font-size:14px; line-height:20px;">Jan 01, 10:05 UTC</div>
                   <span style="color: rgba(0,0,0,0.6); font-size:12px; line-height:16px;">4.92 hours</span>
                   <a style="font-weight: bold; text-decoration: none; font-size:14px; line-height:20px; color: #0073B1;" href="http://localhost:8080/dashboard/app/#/rootcause?anomalyId=8"
                      target="_blank">(view)</a>
