fixed test requiring locale

--- a/thirdeye/thirdeye-pinot/src/test/resources/test-entity-groupby-with-whitelist-email-content-formatter.html
+++ b/thirdeye/thirdeye-pinot/src/test/resources/test-entity-groupby-with-whitelist-email-content-formatter.html
@@ -43,7 +43,7 @@
               </tr>
               <tr style="border-bottom: 1px solid #C7D1D8;">
                 <td style="padding: 6px 12px;white-space: nowrap;">
-                  <div style="color: rgba(0,0,0,0.9); font-size:14px; line-height:20px;">Nov 07, 10:00 PDT</div>
+                  <div style="color: rgba(0,0,0,0.9); font-size:14px; line-height:20px;">Nov 07, 10:00 UTC</div>
                   <span style="color: rgba(0,0,0,0.6); font-size:12px; line-height:16px;">7 hours</span>
                   <a style="font-weight: bold; text-decoration: none; font-size:14px; line-height:20px; color: #0073B1;" href="http://localhost:8080/dashboard/app/#/rootcause?anomalyId=3"
                      target="_blank">(view)</a>
@@ -77,7 +77,7 @@
                 <td style="padding: 6px 12px;white-space: nowrap;">
                   <a style="font-weight: bold; text-decoration: none; font-size:14px; line-height:20px; color: #0073B1;" href="http://localhost:8080/dashboard/app/#/anomalies?anomalyIds=1"
                      target="_blank">group-1</a>
-                  <div style="color:rgba(0,0,0,0.9);font-size:14px;line-height:20px;">Nov07,10:00PDT</div>
+                  <div style="color:rgba(0,0,0,0.9);font-size:14px;line-height:20px;">Nov07,10:00UTC</div>
                   <span style="color: rgba(0,0,0,0.6); font-size:12px; line-height:16px;">7 hours</span>
                 </td>
                 <td style="color: rgba(0,0,0,0.9); font-size:14px; line-height:20px; text-align:center;">10</td>
@@ -109,7 +109,7 @@
                 <td style="padding: 6px 12px;white-space: nowrap;">
                   <a style="font-weight: bold; text-decoration: none; font-size:14px; line-height:20px; color: #0073B1;" href="http://localhost:8080/dashboard/app/#/anomalies?anomalyIds=2"
                      target="_blank">group-2</a>
-                  <div style="color:rgba(0,0,0,0.9);font-size:14px;line-height:20px;">Nov07,10:00PDT</div>
+                  <div style="color:rgba(0,0,0,0.9);font-size:14px;line-height:20px;">Nov07,10:00UTC</div>
                   <span style="color: rgba(0,0,0,0.6); font-size:12px; line-height:16px;">7 hours</span>
                 </td>
                 <td style="color: rgba(0,0,0,0.9); font-size:14px; line-height:20px; text-align:center;">20</td>
