--- a/thirdeye/thirdeye-pinot/src/test/resources/test-entity-groupby-email-content-formatter.html
+++ b/thirdeye/thirdeye-pinot/src/test/resources/test-entity-groupby-email-content-formatter.html
@@ -45,7 +45,7 @@
                 <td style="padding: 6px 12px;white-space: nowrap;">
                   <a style="font-weight: bold; text-decoration: none; font-size:14px; line-height:20px; color: #0073B1;" href="http://localhost:8080/dashboard/app/#/anomalies?anomalyIds=1"
                      target="_blank">group-1</a>
-                  <div style="color:rgba(0,0,0,0.9);font-size:14px;line-height:20px;">Nov07,10:00PDT</div>
+                  <div style="color:rgba(0,0,0,0.9);font-size:14px;line-height:20px;">Nov07,10:00UTC</div>
                   <span style="color: rgba(0,0,0,0.6); font-size:12px; line-height:16px;">7 hours</span>
                 </td>
                 <td style="color: rgba(0,0,0,0.9); font-size:14px; line-height:20px; text-align:center;">10</td>
@@ -77,7 +77,7 @@
                 <td style="padding: 6px 12px;white-space: nowrap;">
                   <a style="font-weight: bold; text-decoration: none; font-size:14px; line-height:20px; color: #0073B1;" href="http://localhost:8080/dashboard/app/#/anomalies?anomalyIds=2"
                      target="_blank">group-2</a>
-                  <div style="color:rgba(0,0,0,0.9);font-size:14px;line-height:20px;">Nov07,10:00PDT</div>
+                  <div style="color:rgba(0,0,0,0.9);font-size:14px;line-height:20px;">Nov07,10:00UTC</div>
                   <span style="color: rgba(0,0,0,0.6); font-size:12px; line-height:16px;">7 hours</span>
                 </td>
                 <td style="color: rgba(0,0,0,0.9); font-size:14px; line-height:20px; text-align:center;">20</td>
